--- a/src/i18n/es_ES.json
+++ b/src/i18n/es_ES.json
@@ -435,6 +435,7 @@
     "Update with no public key!": "¡Actualizar sin clave pública!",
     "Use Testnet": "Usar red de prueba",
     "Use real Bitcoins!": "¡Usar Bitcoins reales!",
+    "Use real Dash!": "¡Usar Dash reales!",
     "Verify": "Verificar",
     "Verify signed message": "Verificar firma",
     "Wallet": "Cartera",
