--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -444,6 +444,7 @@
     "Update with no public key!": "Update with no public key!",
     "Use Testnet": "Use Testnet",
     "Use real Bitcoins!": "Use real Bitcoins!",
+    "Use real Dash!": "Use real Dash!",
     "Verify": "Verify",
     "Verify signed message": "Verify signed message",
     "Wallet": "Wallet",
